Bug 227567. make clientHeight work more like msie patch by mats.palmgren@bredband.net r=bzbarsky sr=jst